--- a/doc/src/draft.tex
+++ b/doc/src/draft.tex
@@ -42,28 +42,26 @@ Den slutgiltiga produkten för detta projekt är ett fullt funktionellt och inte
 Relationen mellan konceptet concurrency och vårt projekt är förmågan att ha fler än en spelare aktiva i spelet samtidigt och se hur dessa interagerar med varandra, samt flertalet 
 aktiva spelområden körandes samtidigt och oberoende av varandra.
 
-\section{System architecture}
+\section{Systemarkitektur}
 \subsection{Design}
-Systemarkitekturen som återfinns i detta dokument är uppdelat i Client-side arkitektur och Server-side arkitektur. Applikation, skriven i Scala, körs i Java Virtual Machine och på 
-grund av detta kan både klient och server köras på alla plattformar som stödjer Java VM 1.7.
+Systemarkitekturen som beskrivs i detta dokument är uppdelat i två delar vilka beskriver akritekturen för klienten samt servern. Med tanke på att både klienten och servern är skrivna i Scala och körs via Java Virtual Maschine både servern och klienten kan köras på alla plattformar som stödjer Java VM 1.7.
 
 
-****** figur 1****
+****** figur 1 ****
 
 
 
 
-\subsection{Client side}
-Målet med designen för klienten till Lost Vaults var att ta fram något som kunde efterliknas med en indirekt terminal, där ingen logik används förutom att skicka förfrågningar och 
-motta samt tolka svaren på förfrågningar. I slutänden hoppas vi kunna åstadkomma en client-side implementation som lätt kan utökas när serverns implementation av spelets logik ökar, 
-alltså ett system som kan utkökas enkelt endast genom att addera nya förfrågningar och svar.
+\subsection{Klient}
+Designen för klienten till Lost Vaults är utvecklad för att efterlikna en indirekt terminal, där ingen logik används förutom att skicka förfrågningar och 
+ta emot samt tolka svaren på förfrågningar. Konceptet för en indirekt terminal valdes för att kunna åstadkomma en implementation hos klienten som lätt kan utökas när serverns implementation av spelets logik ökar. Detta betyder med andra ord ett system som kan utkökas enkelt endast genom att addera nya förfrågningar och svar.
 
-Som synes i Figur 1 är klientfönstret uppdelat i flera textfält som visar relevant information för spelaren. Huvudområdet är för vanliga server-svar och kommer innehålla beskrivningar 
+Som Figur 1 illustrerar är klientfönstret uppdelat i flera textfält som visar relevant information för spelaren. Huvudområdet är för vanliga server-svar och kommer innehålla beskrivningar 
 av rummet, meddelanden i spelarchatten, meddelanden med systeminformation och liknande. Klientens högra sida är reserverat för ständig information som spelaren behöver ta del av snabbt. 
 Den övre delen innehåller information om spelarens egen karaktär, där spelarens liv och stridsegenskaper samt hur mycket mat gruppen har listas. 
 
 Den nedre delen av fönstret innehåller kommandoraden, där spelaren skriver in kommandon i enlighet med ett strikt syntax. När klienten startas välkomnas spelaren 
-av ett centrerat fönster för inloggning . Här kan spelaren skriva in sitt användarnamn och lösenord samt IP:n till den server som spelaren vill koppla upp sig mot. 
+av ett centrerat fönster för inloggning. Här kan spelaren skriva in sitt användarnamn och lösenord samt IP:n tillhörande den server som spelaren vill koppla upp sig mot. 
 
 Klientens GUI är implementerat i Javas Swing UI bibliotek och integrerat i Scala för att använda Akkas TCP funktionalitet.
 
@@ -75,26 +73,25 @@ tillsammans för att skapa en brygga mellan TCP lagret och GUI:t, där PlayGame 
 vidare till GUI via PlayGameCommunication. Samtidigt så skickas data från GUI över nätverket via metodanrop i PlayGameCommuncation till 
 PlayGame för att sedan hamna hos TCPClient.
 
-\subsection{Server side}
-Systemarkitekturens serverdel är uppdelad i sektionerna Concurrency Model, Actor Model och Class Model. Den första delen beskriver vårt 
-val av concurrencymodell, och anledningen till valet. Den andra delen beskriver funktionen hos de fem stora actor-typer i Lost Vaults servern och 
-den tredje ger en ingående beskrivning hur klassförhållanden används av servern.
+\subsection{Server}
+Systemarkitekturens serverdel är uppdelad i sektionerna Concurrency-modell, Actor-modell och Class-modell. Den första delen beskriver vårt 
+val av concurrencymodell samt anledningen till det specifika valet. Den andra delen, Actor-modell, beskriver funktionen hos de fem stora actor-typer i Lost Vaults servern och 
+den tredje, klass-modell, ger en ingående beskrivning hur klassförhållanden används i servern.
 
 \subsubsection{Concurrency model}
 Actor modellen har använts för projektet då vi under vår initiala diskussion gällande designen lyckades isolera beteenden i mindre och till stor del 
 fristående sektioner. Dessa sektioner kunde enkelt skapas för att dela data enbart genom meddelandesändning som i sin tur leder till att problem 
 såsom deadlock kunde undvikas. 
 
-För att implementera denna sortens system och bibehålla hög effektivitet valde vi Scala som programspråk till servern av den enkla anledningen att 
-skalbarheten är ett av språkets fundamentala mål. Genom rekommendationer av skaparna bakom Scala och via språkets styrkor och enkelhet, beslöt vi 
+För att implementera denna sortens system och bibehålla hög effektivitet valde vi Scala som programspråk till servern och detta passade otroligt bra då skalbarhet är ett av språkets fundamentala mål. Genom rekommendationer av skaparna bakom Scala och via språkets styrkor och enkelhet, beslöt vi oss för 
 att använda Akka som vårt aktörbibliotek. Detta för att kunna använda Akkas TCP-bibliotek för nätverkskommunikationen. Bibliotekets enkla integration 
-ledde till vårt beslut att använda Scala och Akka som val av programspråk och aktörbibliotek även för klienten, som tidigare nämnts.                    
+var en av punkterna som ledde till vårt beslut att använda Scala och Akka som val av programspråk och aktörbibliotek även för klienten.                    
 
 **Figur 3**
 
 \subsubsection{Actor model}
-Serverdelen är uppdelad i flera processer via Akkas aktörbibliotek för att upprätthålla Actor Concurrency Model i enlighet med Figur 3. Bara två typer av aktörer kommmunicerar 
-direkt med nätverket via TCP/IP, Connection Manager-aktören och Player-aktörerna. Connection Manager- aktören har som syfte att hantera inkommande uppkopplingar samt ansvarar 
+Serverdelen är uppdelad i flera processer via Akkas aktörbibliotek för att upprätthålla Actor Concurrency-modellen i enlighet med Figur 3. Endast två typer av aktörer kommmunicerar 
+direkt med nätverket via TCP/IP, Connection Manager-aktören och Player-aktörerna. Connection Manager-aktören har som syfte att hantera inkommande uppkopplingar samt ansvarar 
 för att skapa Player-aktörer som nya högnivå aktörer innan de registreras som den nyetablerade uppkopplingens lyssnare. Som lyssnare kommer Player-aktören mottaga och skicka data 
 över nätverket genom den etablerade uppkopplingen. Player-aktören styr över alla ting relaterat till klienten, som exempelvis spelarens attribut och för att verifiera 
 inloggningsförsök via kommunikation med PlayerMap. Det är även via Player-aktören andra aktörer kan skicka meddelanden över nätverket om det skulle behövas. 
@@ -105,19 +102,19 @@ ett viktigt kommando som agerar på följande sätt är exempelvis “WHISPER”
 sig om att det inte existerar flera spelare med samma namn på servern.
 
 GroupMap-aktören fyller en liknande funktion som PlayerMap, men länkar istället namnen på spelarna med spelargrupper istället för spelaraktörer. 
-En spelargrupp är en samling av en eller fler spelare som tillsammans kan gå ner i en Dungeon som är procedurellt genererad för just dem. Syftet med 
+En spelargrupp är en samling av en eller fler spelare som tillsammans kan gå ner i en Dungeon, som är procedurellt genererad för just dem. Syftet med 
 denna aktör är att underlätta skapandet och att ansluta sig till andra spelargrupper. Genom att använda GroupMap räcker det att ansluta sig till en 
 spelare via dess namn för att inkluderas i denna spelares grupp, eller för att skapa en ny grupp med denna spelare.
 
-Den fjärde sortens aktör som servern använder är Dungeon-aktören, den som utför spelets logik. 
+Den fjärde sortens aktör som servern använder är Dungeon-aktören och det denna som utför spelets logik. 
 Det existerar ett speciellt tillstånd av Dungeon-aktören, kallat City- aktören. City existerar ständigt 
 under serverns livstid och hanterar spelets sociala aspekt, såsom chattande och skapandet av grupper. 
-Det ordinära fallet som Dungeon-aktören ansvarar för är genererandet och hanterandet av den procedurella 
-grottan av multipla, sammanlänkade rum i ett tvådimensionellt rutnät. Det är i dessa rum som spelare kommer kunna göra uppdrag, 
-finna skatter etc. Dungeon-aktören ansvarar för koordinerandet av alla spelare som finns i grottan. 
+Det som Dungeon-aktören ansvarar för är genererandet och hanterandet av den procedurellt skapade 
+grotta som består av multipla och sammanlänkade rum i ett tvådimensionellt rutnät. Det är i dessa rum som spelare kommer kunna göra uppdrag, 
+finna skatter, slåss mot monster eller spelare etc. Dungeon-aktören ansvarar även för koordinationen av alla spelare som finns i grottan. 
 Ett exempel på detta är kommandot “SAY”  som ska skickas till relevanta spelare. 
 
-Efter att City-aktören har skapat Dungeon-aktören ansvarar den för sin egen livslängd och avsutar sig själv endast när det inte längre finns några spelare i den.
+Efter att City-aktören har skapat Dungeon-aktören ansvarar den för sin egen livslängd och avslutar sig själv endast när det inte längre finns några spelare i den.
 
 **Figur 4**
 
@@ -137,7 +134,7 @@ Dungeon håller även koll på de Players som för tillfället är uppkopplade o
 
 I detta projekt användes flera olika verktyg för att underlätta utvecklingen. Då vi använt Scala som vårt val av programspråk skrevs i princip all vår kod i Eclipse. 
 Detta då vi anser att det i särklass är det enklaste sättet att utveckla kod till Java eller Scala. Även fast all kod är skriven i Eclipse använder vi Ant Build System 
-för automatiserad kompilering samt byggandet av vår klient och server, klar att köras i Java Virtual Machine. 
+för automatiserad kompilering samt vid byggandet av vår klient och server; som efter kompilering är klar att köras i Java Virtual Machine. 
 
 För hanteringen av versionskontroll har vi använt det tillförlitliga och välkända verktyget Git. Vi satte upp ett nytt git repository på Github.com specifikt för detta 
 projekt och valet av Git gjordes på grund av dess styrkor samt att vi är vana användare av det.
@@ -145,7 +142,7 @@ projekt och valet av Git gjordes på grund av dess styrkor samt att vi är vana 
 Testandet av vår kod görs med ScalaTest ramverket samt ett Ant Build skript som ger oss möjligheten till automatiskt byggande och körning av tester.
 
 Sammansättningen av dokumentationen utförs med Scaladoc på grund av dess likhet med JavaDoc, ett verktyg vi är vana med att använda, och Ant har reviderats för att automatiskt 
-bygga vår dokumentation.
+bygga dokumentationen.
 
 \section{Implementation}
 
